--- a/styles/global.css
+++ b/styles/global.css
@@ -8,7 +8,8 @@ body {
   width: 1100px;
   margin: 0 auto;
   font-family: Raleway, sans-serif;
-  border: ;
+  
+  border: 1px solid black;
 }
 
 h1,
