new section header cover

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,137 @@
-/* место для вашего кода */
+
+.header {
+   display: grid;
+   grid-template-columns: 1fr auto 1fr;
+   padding: 92px 24px 96px;
+ }
+ 
+ .header__menu {
+   align-self: center;
+ }
+ 
+ .header__links-list {
+   display: flex;
+   list-style: circle;
+   gap: 41px;
+   font-size: 18px;
+ }
+ 
+ .header__links-list-item {
+   letter-spacing: 0.18px;
+ }
+ 
+ .header__links-list-item_no-bullit {
+   list-style-type: none;
+ }
+ 
+ .header__link_active {
+   text-decoration: none;
+ }
+ 
+ .header__logo {
+   /* Vector */
+   width: 148px;
+ }
+ 
+ .header__logo-image {
+   width: 100%;
+   height: 105px;
+ }
+ 
+ .address {
+   width: 239px;
+   font-family: Raleway;
+   font-style: normal;
+   font-weight: 400;
+   font-size: 18px;
+   line-height: 24px;
+ }
+
+.header__address {
+   align-self: center;
+   justify-self: end;
+}
+ 
+.cover {
+   background-image: url(../images/cover.jpg);
+   background-repeat: no-repeat;
+   background-position: center;
+   background-size: cover;
+   padding: 165px 50px 62px;
+   position: relative;
+   color: white;
+   z-index: 0;
+}
+
+.overlay {
+   position: absolute;
+   background: rgba(0, 0, 0, 1);
+   opacity: 0.5;
+   inset: 0;
+   z-index: 1;
+}
+
+.cover__title {
+   position: relative;
+   font-size: 100px;
+   font-weight: 700;
+   line-height: 115px;
+   letter-spacing: 0.3em;
+   margin-bottom: 135px;
+   text-transform: uppercase;
+   color: white;
+   z-index: 2;
+}
+
+.aligned-text {
+   display: block;
+   margin-bottom: 20px;
+}
+
+.aligned-text-center {
+   /* line-height: 100%; */
+   text-align: center;
+}
+
+.aligned-text-right {
+   text-align: right;
+}
+
+.no-letter-spacing:last-child {
+   letter-spacing: 0;
+}
+
+.letter-spacing-extended {
+   letter-spacing: 0.4em;
+}
+
+.cover__description {
+   position: relative;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   /* gap: 78px; */
+   z-index: 2;
+}
+
+.cover__description-text {
+   font-family: Raleway;
+   font-size: 22px;
+   line-height: 28px;
+   word-spacing: 28px; 
+   text-transform: uppercase;
+}
+
+.bet-button {
+   font-family: Raleway;
+   text-transform: uppercase;
+   font-size: 22px;
+   font-weight: 500;
+   line-height: 26px;
+   padding: 12px 32px 11px;
+   background-color: transparent;
+   color: white;
+   cursor: pointer;
+   border: 1px solid white;
+}
+
