--- a/styles/style.css
+++ b/styles/style.css
@@ -219,3 +219,52 @@
    line-height: 23px;
    margin-left: 40px;
 }
+
+/* была попытка сделать на гридах about*/
+.about {
+   padding: 0 24px 178px;
+   display: flex;
+   gap: 72px;
+}
+
+.about__wrapper_logo {
+   margin: 0 auto;
+}
+
+.about__logo {
+   width: 240px;
+   height: 240px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   border-radius: 50%;
+   background-color: black;
+}
+
+.about__logo-image {
+   width: 148px;
+   height: 114px;
+}
+
+.about__section_info {
+   display: flex;
+   flex-direction: column;
+   gap: 32px;
+   font-family: Raleway;
+   font-size: 20px;
+   font-weight: 400;
+   line-height: 24px;
+}
+
+.about__title {
+   text-transform: uppercase;
+   margin: 101px 0;
+}  
+
+.about__text {
+   display: flex;
+   flex-direction: column;
+   gap: 25px;
+   font-size: 20px;
+   line-height: 24px;
+}
