new section footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -89,7 +89,6 @@
 }
 
 .aligned-text-center {
-   /* line-height: 100%; */
    text-align: center;
 }
 
@@ -220,11 +219,12 @@
    margin-left: 40px;
 }
 
-/* была попытка сделать на гридах about*/
 .about {
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   justify-content: space-between;
+   gap: 25px;
    padding: 0 24px 178px;
-   display: flex;
-   gap: 72px;
 }
 
 .about__wrapper_logo {
@@ -247,16 +247,16 @@
 }
 
 .about__section_info {
-   display: flex;
-   flex-direction: column;
-   gap: 32px;
    font-family: Raleway;
    font-size: 20px;
    font-weight: 400;
    line-height: 24px;
+   gap: 32px;
+   grid-column: span 2;
 }
 
 .about__title {
+   font-size: 40px;
    text-transform: uppercase;
    margin: 101px 0;
 }  
@@ -267,4 +267,42 @@
    gap: 25px;
    font-size: 20px;
    line-height: 24px;
+}
+
+.footer {
+   display: flex;
+   justify-content: space-between;
+   padding: 0 50px 91px;
+}
+
+.footer__menu {
+   display: flex;
+   flex-direction: column;
+}
+
+.footer__menu-list {
+   font-size: 18px;
+   text-align: center;
+}
+
+.footer__menu-list-item {
+   list-style: none;
+}
+
+.footer__menu-link {
+   text-decoration: underline;
+}
+
+.footer__social-list {
+   display: flex;
+   gap: 48px;
+}
+
+.footer__social-list-item {
+   list-style: none;
+}
+
+.footer__social-icon {
+   width: 48px;
+   height: 48px;
 }
