--- a/styles/style.css
+++ b/styles/style.css
@@ -1,33 +1,34 @@
-
+/* начало блока header */
 .header {
    display: grid;
    grid-template-columns: 1fr auto 1fr;
-   padding: 92px 24px 96px;
- }
- 
- .header__menu {
-   align-self: center;
+   align-items: center;
+   padding: 92px 50px;
  }
  
  .header__links-list {
    display: flex;
-   list-style: circle;
-   gap: 41px;
-   font-size: 18px;
+   gap: 32px;
  }
  
  .header__links-list-item {
-   letter-spacing: 0.18px;
+   list-style: circle;
+   font-size: 18px;
  }
  
  .header__links-list-item_no-bullit {
-   list-style-type: none;
+   list-style: none;
+ }
+ 
+ .header__link {
+   text-decoration: none;
+   border-bottom: 1px solid;
  }
  
  .header__link_active {
-   text-decoration: none;
+   border-bottom: none;
  }
- 
+
  .header__logo {
    /* Vector */
    width: 148px;
@@ -37,7 +38,7 @@
    width: 100%;
    height: 105px;
  }
- 
+
  .address {
    width: 239px;
    font-family: Raleway;
@@ -45,102 +46,107 @@
    font-weight: 400;
    font-size: 18px;
    line-height: 24px;
+   text-decoration: none;
+   list-style: none;
  }
-
-.header__address {
+ 
+ .header__address {
    align-self: center;
    justify-self: end;
-}
- 
+   list-style: none;
+ }
+
+ .header__address a {
+   text-decoration: none;
+   border-bottom: 1px solid;
+ }
+
+ /* начало блока cover*/
 .cover {
    background-image: url(../images/cover.jpg);
-   background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
-   padding: 165px 50px 62px;
-   position: relative;
+   padding: 165px 50px 50px;
    color: white;
+   position: relative;
    z-index: 0;
-}
-
-.overlay {
+ }
+ 
+ .overlay {
    position: absolute;
    background: rgba(0, 0, 0, 1);
    opacity: 0.5;
    inset: 0;
    z-index: 1;
-}
-
-.cover__title {
+ }
+ 
+ .cover__title {
+   margin-bottom: 135px;
    position: relative;
    font-size: 100px;
-   font-weight: 700;
-   line-height: 115px;
+   line-height: 1.10;
    letter-spacing: 0.3em;
-   margin-bottom: 135px;
    text-transform: uppercase;
-   color: white;
-   z-index: 2;
-}
-
-.aligned-text {
+   color: #fff;
+   z-index: 1;
+ }
+ 
+ .aligned-text {
+   margin-top: 20px;
    display: block;
-   margin-bottom: 20px;
-}
-
-.aligned-text-center {
+   line-height: 1;
+ }
+ 
+ .aligned-text_center {
    text-align: center;
-}
-
-.aligned-text-right {
+ }
+ 
+ .aligned-text_right {
    text-align: right;
-}
-
-.no-letter-spacing:last-child {
+ }
+ 
+ .letter-spacing-extended {
+   letter-spacing: 0.6em;
+ }
+ 
+ .no-letter-spacing:last-child {
    letter-spacing: 0;
 }
-
-.letter-spacing-extended {
-   letter-spacing: 0.4em;
-}
-
-.cover__description {
-   position: relative;
+ 
+ .cover__description {
    display: flex;
-   justify-content: space-between;
+   gap: 78px;
+   justify-content: flex-end;
    align-items: center;
-   /* gap: 78px; */
-   z-index: 2;
-}
-
-.cover__description-text {
-   font-family: Raleway;
+   position: relative;
+   z-index: 1;
+ }
+ 
+ .cover__description-text {
    font-size: 22px;
-   line-height: 28px;
-   word-spacing: 28px; 
    text-transform: uppercase;
-}
-
-.bet-button {
-   font-family: Raleway;
-   text-transform: uppercase;
-   font-size: 22px;
-   font-weight: 500;
-   line-height: 26px;
+   word-spacing: 18px;
+   color: #fff;
+ }
+ 
+ .bet-button {
    padding: 12px 32px 11px;
+   font-weight: normal;
+   font-size: 22px;
+   text-transform: uppercase;
    background-color: transparent;
-   color: white;
-   cursor: pointer;
-   border: 1px solid white;
+   border: 1px solid #fff;
+   color: #fff;
 }
 
+/* начало блока lots */
 .lots {
-   margin: 179px 24px 146px;
+   padding: 180px 24px 0;
 }
 
 .lots__heading {
    margin-left: 40px;
-   margin-bottom: 27px;
+   margin-bottom: 30px;
    font-size: 40px;
    font-weight: 700;
    line-height: 47px;
@@ -158,6 +164,7 @@
    position: relative;
    display: flex;
    flex-direction: column;
+   
    justify-content: space-between;
    min-height: 563px;
    padding: 48px 40px 48px;
@@ -166,6 +173,7 @@
 .lots__card-list-item {
    width: 334px;
    list-style: none;
+   flex-grow: 1;
 }
 
 .card-link {
@@ -219,12 +227,13 @@
    margin-left: 40px;
 }
 
+/* начало блока about */
 .about {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-content: space-between;
    gap: 25px;
-   padding: 0 24px 178px;
+   padding: 185px 24px 178px;
 }
 
 .about__wrapper_logo {
@@ -236,21 +245,21 @@
    height: 240px;
    display: flex;
    justify-content: center;
-   align-items: center;
+   /* align-items: center; */
    border-radius: 50%;
    background-color: black;
 }
 
 .about__logo-image {
    width: 148px;
-   height: 114px;
+   /* height: 114px; */
 }
 
 .about__section_info {
    font-family: Raleway;
    font-size: 20px;
    font-weight: 400;
-   line-height: 24px;
+   /* line-height: 24px; */
    gap: 32px;
    grid-column: span 2;
 }
@@ -258,7 +267,7 @@
 .about__title {
    font-size: 40px;
    text-transform: uppercase;
-   margin: 101px 0;
+   margin: 99px 0;
 }  
 
 .about__text {
@@ -269,6 +278,7 @@
    line-height: 24px;
 }
 
+/* начало блока footer */
 .footer {
    display: flex;
    justify-content: space-between;
